--- a/personalbio.css
+++ b/personalbio.css
@@ -1,6 +1,6 @@
 body{
   background-color: lightsteelblue;
-  background-image: url(http://farm5.static.flickr.com/4013/4699076589_4acbe79f96.jpg);
+  background-image: url(http://www.wowphilippinesblog.com/images/2012/12/philippine-islands-300x265.jpg);
   background-repeat: no-repeat;
   background-position: right top;
 }
