--- a/personalbio.css
+++ b/personalbio.css
@@ -1,6 +1,6 @@
 body{
   background-color: lightsteelblue;
-  background-image: url(http://www.wowphilippinesblog.com/images/2012/12/philippine-islands-300x265.jpg);
+  background-image: url(https://upload.wikimedia.org/wikipedia/en/thumb/b/b9/New_England_Patriots_logo.svg/320px-New_England_Patriots_logo.svg.png);
   background-repeat: no-repeat;
   background-position: right top;
 }
