--- a/personalbio.css
+++ b/personalbio.css
@@ -1,3 +1,4 @@
+/* Lewis Lomugdang */
 body{
   background-color: lightsteelblue;
   background-image: url(https://upload.wikimedia.org/wikipedia/en/thumb/b/b9/New_England_Patriots_logo.svg/320px-New_England_Patriots_logo.svg.png);
